syntax = "proto3";

option csharp_namespace = "ResumeGenerator.GeneratorService.Grpc.Generated";

import "google/protobuf/empty.proto";

package telegram_adapter;

service TelegramAdapter {
  rpc SendResume (SendResumeRequest) returns (google.protobuf.Empty);
}

message SendResumeRequest {
  string userID = 1;
  string resumeID = 2;
}
